Fix vertical alignment of iamge blocks

--- a/app/components/blocks/ImageBlock/ImageBlock.module.scss
+++ b/app/components/blocks/ImageBlock/ImageBlock.module.scss
@@ -29,7 +29,7 @@
   width: 100%;
   height: 100%;
   background-attachment: fixed;
-  background-position: center center;
+  background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -52,11 +52,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center center;
-
-  @media (max-width: #{g.$bp-sm}) {
-    object-position: center center;
-  }
+  object-position: center top;
 }
 
 // ─── Overlay scrim ───────────────────────────────────────────────────────────
